--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "glg-progress-bar",
   "version": "0.0.0",
   "dependencies": {
-    "polymer-tools": "git://github.com/custom-elements/polymer-tools#master",
+    "polymer-serve": "git://github.com/custom-elements/polymer-serve#master",
     "polymer": "git://github.com/custom-elements/polymer#master",
     "ui-styles": "git://github.com/custom-elements/ui-styles#master",
     "ui-fonts": "git://github.com/custom-elements/ui-fonts#master"
   },
   "license": "ISC",
   "scripts": {
-    "postinstall": "polymer-build src/ build/",
-    "test": "polymer-build watch . src/ build/"
+    "test": "polymer-serve ."
   }
 }
