update git protocol

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "glg-progress-bar",
   "version": "0.0.0",
   "dependencies": {
-    "polymer-serve": "git://github.com/custom-elements/polymer-serve#master",
-    "polymer": "git://github.com/custom-elements/polymer#master",
-    "ui-styles": "git://github.com/custom-elements/ui-styles#master",
-    "ui-fonts": "git://github.com/custom-elements/ui-fonts#master"
+    "polymer-serve": "git+https://github.com/custom-elements/polymer-serve#master",
+    "polymer": "git+https://github.com/custom-elements/polymer#master",
+    "ui-styles": "git+https://github.com/custom-elements/ui-styles#master",
+    "ui-fonts": "git+https://github.com/custom-elements/ui-fonts#master"
   },
   "license": "ISC",
   "scripts": {
